@@ -1,5 +1,5 @@
 {
-  "count": 196,
+  "count": 219,
   "uniques": 1,
   "views": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 5,
+      "count": 28,
       "uniques": 1
     }
   ]
